Fixed scrollbar issue (actually,) added to projects page

--- a/css/main.css
+++ b/css/main.css
@@ -43,10 +43,7 @@ video {
 
 body {
     font-family: 'Droid Sans';
-}
-
-html { 
-    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 nav {
